# rehab-coach

./: .gitignore  LICENSE  README.md  start_rk3588_system.sh
apps/android/: README.md  settings.gradle
apps/android/mobile/: build.gradle  proguard-rules.pro
models/: README.md  rknn_pose_dataset.txt  tiny_tcn.onnx
scripts/: build_android_apk.sh  build_imu_measure.sh  capture_quant_images.py  check_pose_rknn.py  check_vision_3d.py  convert_yolov8_pose_rknn.py  export_yolov8_pose_onnx.py  list_cameras.py  list_imu_ports.py  package_release.sh  qt_socket_smoke.py  run_pose.sh  setup_bluetooth_rk3588.sh  stereo_calibrate.py  sync_imu_assessment.py  wsl_convert_rknn.sh  yolo_pose_infer.py
src/: third_party
src/backend/: MANIFEST.txt  README_DEPLOY.txt  assessment_plan.py  initial_assessment.py  main.py  requirement-rk3588.txt  start_rk3588.sh  training_session.py
src/backend/calibration/: calibration_meta.json
src/backend/config/: camera_config.rk3588.yaml  camera_config.yaml  imu_config.yaml  scoring_config.yaml  stereo_calib.json  training_blocks.yaml
src/backend/core/: __init__.py  action_state_machine.py  correction_engine.py  (+7 more)
src/gateway/: README.md  bt_rehab_gateway.py  bt_rehab_gateway.py.bak-before-raw-io  bt_rehab_gateway.service
src/imu/dual/IMU_measure/: CMakeLists.txt
src/imu/dual/IMU_measure/inc/: collect_data.h  data_analysis.h
src/imu/dual/IMU_measure/src/: IMU_main.c  collect_data.c  data_analysis.c
src/qt_gui/: CMakeLists.txt  README_LINUX.md  README_changes.txt  README_rehab_advice_100.md  main.cpp  mainwindow.cpp  mainwindow.h  pic.qrc  prograss_copy.pro  widget.cpp  widget.h  widget.ui
src/qt_gui/ipc/: enginebridge.cpp  enginebridge.h  fusionbridge.cpp  fusionbridge.h  imubridge.cpp  imubridge.h  llmbridge.cpp  llmbridge.h  visionbridge.cpp  visionbridge.h
src/qt_gui/models/: actiondb.cpp  actiondb.h  datastorage.cpp  datastorage.h  scoreengine.cpp  scoreengine.h
src/qt_gui/pages/: assessmentpage.cpp  assessmentpage.h  homepage.cpp  homepage.h  medicaladvicepage.cpp  medicaladvicepage.h  recordspage.cpp  recordspage.h  settingspage.cpp  settingspage.h  trainingpage.cpp  trainingpage.h
src/qt_gui/res/qss/: style-1.qss  style-2.qss  style-3.qss  style-4.qss
src/qt_gui/resources/: dummy.txt  resources.qrc
src/qt_gui/scripts/: build_linux.sh  linux_mock_training_engine.py  qt_client_smoke.py  run_linux.sh  start_backend.sh  start_linux_mock_engine.sh  test_gif_load.cpp
src/qt_gui/utils/: elderux.h  fontscale.cpp  fontscale.h
src/qt_gui/widgets/: actioncard.cpp  actioncard.h  arcgauge.cpp  arcgauge.h  navibar.cpp  navibar.h  radarchart.cpp  radarchart.h  visionpreviewwidget.cpp  visionpreviewwidget.h
(+75 files in other folders)
